added: recansens model

--- a/experiments/bias_classification/recansens/experiment.ipynb
+++ b/experiments/bias_classification/recansens/experiment.ipynb
@@ -102,219 +102,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['pre_ids', 'masks', 'pre_lens', 'post_in_ids', 'post_out_ids', 'pre_tok_label_ids', 'post_tok_label_ids', 'rel_ids', 'pos_ids', 'categories', 'index', 'bias_label'])"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dataset.get_key_names()"
+    "def bert_to_word_tokens(tokens):\n",
+    "    \"\"\"\n",
+    "    Detokenizes an input tokenized by BertTokenizer.\n",
+    "    @param tokens (list[str])\n",
+    "    @returns sent (str) detokenized str\n",
+    "    \"\"\"\n",
+    "    bert_to_word = {}\n",
+    "    word_tokens = []\n",
+    "    word_token_idx = 0\n",
+    "    for bert_token_idx, bert_token in enumerate(tokens):\n",
+    "        bert_to_word[bert_token_idx] = word_token_idx\n",
+    "        if bert_token.startswith(\"##\"):\n",
+    "            word_tokens[-1] += bert_token.replace(\"##\", \"\")\n",
+    "        else:\n",
+    "            word_tokens.append(bert_token)\n",
+    "            word_token_idx += 1\n",
+    "                        \n",
+    "    return word_tokens, bert_to_word"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'pre_ids': tensor([ 1996, 19817,  7361,  5369,  4388,  8945,  8737,  4232,  2003,  2019,\n",
-       "          3296,  7069,  3275, 10080,  2971,  2029,  3138,  2173,  1999,  3000,\n",
-       "          1010,  2605,  1012,     0,     0,     0,     0,     0,     0,     0,\n",
-       "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-       "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-       "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-       "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-       "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0]),\n",
-       " 'masks': tensor([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1,\n",
-       "         1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "         1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "         1, 1, 1, 1, 1, 1, 1, 1], dtype=torch.uint8),\n",
-       " 'pre_lens': tensor(23),\n",
-       " 'post_in_ids': tensor([ 1945,  1996, 19817,  7361,  5369,  4388,  8945,  8737,  4232,  2003,\n",
-       "          2019,  3296,  3275, 10080,  2971,  2029,  3138,  2173,  1999,  3000,\n",
-       "          1010,  2605,  1012,     0,     0,     0,     0,     0,     0,     0,\n",
-       "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-       "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-       "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-       "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-       "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0]),\n",
-       " 'post_out_ids': tensor([ 1996, 19817,  7361,  5369,  4388,  8945,  8737,  4232,  2003,  2019,\n",
-       "          3296,  3275, 10080,  2971,  2029,  3138,  2173,  1999,  3000,  1010,\n",
-       "          2605,  1012,  1887,     0,     0,     0,     0,     0,     0,     0,\n",
-       "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-       "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-       "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-       "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0,\n",
-       "             0,     0,     0,     0,     0,     0,     0,     0,     0,     0]),\n",
-       " 'pre_tok_label_ids': tensor([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0.,\n",
-       "         0., 0., 0., 0., 0., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2.,\n",
-       "         2., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2.,\n",
-       "         2., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2.,\n",
-       "         2., 2., 2., 2., 2., 2., 2., 2.]),\n",
-       " 'post_tok_label_ids': tensor([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "         0., 0., 0., 0., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2.,\n",
-       "         2., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2.,\n",
-       "         2., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2.,\n",
-       "         2., 2., 2., 2., 2., 2., 2., 2.]),\n",
-       " 'rel_ids': tensor([ 0,  1,  1,  1,  1,  2,  2,  2,  5,  0,  1,  9,  9,  9,  6,  2, 23, 14,\n",
-       "          3,  4,  7, 14,  7,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
-       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
-       "          0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,\n",
-       "          0,  0,  0,  0,  0,  0,  0,  0]),\n",
-       " 'pos_ids': tensor([0, 2, 2, 2, 1, 2, 2, 2, 5, 0, 1, 1, 2, 5, 2, 1, 5, 2, 3, 2, 6, 2, 6, 0,\n",
-       "         0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "         0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
-       "         0, 0, 0, 0, 0, 0, 0, 0]),\n",
-       " 'categories': tensor([0.0054, 0.0296, 0.0065, 0.0040, 0.0232, 0.0117, 0.0117, 0.0374, 0.0187,\n",
-       "         0.0209, 0.0342, 0.0157, 0.0176, 0.0393, 0.0296, 0.0205, 0.0415, 0.0104,\n",
-       "         0.0118, 0.0306, 0.0376, 0.0336, 0.0335, 0.0202, 0.0311, 0.0198, 0.0135,\n",
-       "         0.0401, 0.0263, 0.0399, 0.0264, 0.0008, 0.0148, 0.0344, 0.0398, 0.0010,\n",
-       "         0.0306, 0.0232, 0.0386, 0.0196, 0.0345, 0.0051, 0.0153]),\n",
-       " 'index': tensor(1, dtype=torch.int16),\n",
-       " 'bias_label': tensor(1, dtype=torch.int16)}"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dataset[0]"
+    "def add_bias_features(dataset, featurizer):\n",
+    "    \"\"\"\n",
+    "    Adds embeddings \n",
+    "    @\n",
+    "    \"\"\"\n",
+    "    intermediary_labels = dataset.get_val('pre_tok_label_ids')\n",
+    "    embeddings = []\n",
+    "    for entry in tqdm(dataset):\n",
+    "        idx = int(entry[\"index\"])\n",
+    "        bert_toks = all_bert_toks[idx]\n",
+    "        word_tokens, bert_to_word = bert_to_word_tokens(bert_toks)\n",
+    "        \n",
+    "        bias_idx = entry['pre_tok_label_ids'].to(dtype=torch.int).flatten().tolist().index(1)\n",
+    "        bias_word = word_tokens[bert_to_word[bias_idx]]\n",
+    "        \n",
+    "        features = featurizer.features(entry[\"pre_ids\"].tolist(), \n",
+    "                                       entry[\"rel_ids\"].tolist(), \n",
+    "                                       entry[\"pos_ids\"].tolist())\n",
+    "        embeddings.append(features[bias_idx, :])\n",
+    "        \n",
+    "    tensor = torch.tensor(np.stack(embeddings), dtype=torch.float32)  # num_entries, dim\n",
+    "    dataset.add_data(tensor, \"bias_features\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "82f526c142e941db9224d9e2d1f75b7a",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
-       "[tensor(1996),\n",
-       " tensor(19817),\n",
-       " tensor(7361),\n",
-       " tensor(5369),\n",
-       " tensor(4388),\n",
-       " tensor(8945),\n",
-       " tensor(8737),\n",
-       " tensor(4232),\n",
-       " tensor(2003),\n",
-       " tensor(2019),\n",
-       " tensor(3296),\n",
-       " tensor(7069),\n",
-       " tensor(3275),\n",
-       " tensor(10080),\n",
-       " tensor(2971),\n",
-       " tensor(2029),\n",
-       " tensor(3138),\n",
-       " tensor(2173),\n",
-       " tensor(1999),\n",
-       " tensor(3000),\n",
-       " tensor(1010),\n",
-       " tensor(2605),\n",
-       " tensor(1012),\n",
-       " tensor(0),\n",
-       " tensor(0),\n",
-       " tensor(0),\n",
-       " tensor(0),\n",
-       " tensor(0),\n",
-       " tensor(0),\n",
-       " tensor(0),\n",
-       " tensor(0),\n",
-       " tensor(0),\n",
-       " tensor(0),\n",
-       " tensor(0),\n",
-       " tensor(0),\n",
-       " tensor(0),\n",
-       " tensor(0),\n",
-       " tensor(0),\n",
-       " tensor(0),\n",
-       " tensor(0),\n",
-       " tensor(0),\n",
-       " tensor(0),\n",
-       " tensor(0),\n",
-       " tensor(0),\n",
-       " tensor(0),\n",
-       " tensor(0),\n",
-       " tensor(0),\n",
-       " tensor(0),\n",
-       " tensor(0),\n",
-       " tensor(0),\n",
-       " tensor(0),\n",
-       " tensor(0),\n",
-       " tensor(0),\n",
-       " tensor(0),\n",
-       " tensor(0),\n",
-       " tensor(0),\n",
-       " tensor(0),\n",
-       " tensor(0),\n",
-       " tensor(0),\n",
-       " tensor(0),\n",
-       " tensor(0),\n",
-       " tensor(0),\n",
-       " tensor(0),\n",
-       " tensor(0),\n",
-       " tensor(0),\n",
-       " tensor(0),\n",
-       " tensor(0),\n",
-       " tensor(0),\n",
-       " tensor(0),\n",
-       " tensor(0),\n",
-       " tensor(0),\n",
-       " tensor(0),\n",
-       " tensor(0),\n",
-       " tensor(0),\n",
-       " tensor(0),\n",
-       " tensor(0),\n",
-       " tensor(0),\n",
-       " tensor(0),\n",
-       " tensor(0),\n",
-       " tensor(0)]"
+       "HBox(children=(IntProgress(value=0, max=332), HTML(value='')))"
       ]
      },
-     "execution_count": 24,
      "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "list(entry[\"pre_ids\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
+     "output_type": "display_data"
+    },
     {
-     "ename": "KeyError",
-     "evalue": "tensor(1996)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-22-930bcdd9bf18>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mentry\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdataset\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mfeaturizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfeatures\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mentry\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"pre_ids\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mentry\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"rel_ids\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mentry\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"pos_ids\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/Documents/sabri/school/cs_224u/attention_analysis/tasks/bias_classification/lib/tagging/features.py\u001b[0m in \u001b[0;36mfeatures\u001b[0;34m(self, id_seq, rel_ids, pos_ids)\u001b[0m\n\u001b[1;32m    108\u001b[0m             \u001b[0mpad_len\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    109\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 110\u001b[0;31m         \u001b[0mtoks\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mid2tok\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mid_seq\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    111\u001b[0m         \u001b[0;31m# build list of [word, [tok indices the word came from]]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    112\u001b[0m         \u001b[0mwords\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Documents/sabri/school/cs_224u/attention_analysis/tasks/bias_classification/lib/tagging/features.py\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m    108\u001b[0m             \u001b[0mpad_len\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    109\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 110\u001b[0;31m         \u001b[0mtoks\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mid2tok\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mid_seq\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    111\u001b[0m         \u001b[0;31m# build list of [word, [tok indices the word came from]]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    112\u001b[0m         \u001b[0mwords\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: tensor(1996)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
    "source": [
-    "entry = dataset[0]\n",
-    "featurizer.features(entry[\"pre_ids\"], entry[\"rel_ids\"], entry[\"pos_ids\"])"
+    "add_bias_features(dataset, featurizer)"
    ]
   },
   {
@@ -327,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,36 +354,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(IntProgress(value=0, description='epoch training', style=ProgressStyle(description_width='initi…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": []
     }
    ],
    "source": [
-    "losses, evaluations = classification_experiment.train_model(train_dataloader, eval_dataloader, input_key='attention_dist', label_key='bias_label', threshold=0.42)"
+    "losses, evaluations = classification_experiment.train_model(train_dataloader, eval_dataloader, input_key='bias_features', label_key='bias_label', threshold=0.42)\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,14 +381,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.5602870774269103\n"
+      "0.04847464928853101\n"
      ]
     }
    ],
@@ -541,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,14 +408,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.6637993874070985\n"
+      "0.9656565656565657\n"
      ]
     }
    ],
@@ -567,14 +425,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.6379312454511352\n"
+      "0.9272150072150072\n"
      ]
     }
    ],
